Eliminate usage of Guava (#61)