@@ -26,12 +26,11 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.io.File;
 import java.util.List;
+import java.util.Set;
 
 import org.apache.commons.lang3.StringUtils;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-
-import com.google.common.collect.ImmutableSet;
 
 class ModelParserTest {
 
@@ -69,7 +68,7 @@ class ModelParserTest {
     assertBundle(files.get(12), "bundles/io.wcm.wcm.ui.granite-1.9.2.jar");
 
     ModelContentPackageFile pkg6 = (ModelContentPackageFile)files.get(6);
-    assertEquals(ImmutableSet.of("aem-author"), pkg6.getVariants());
+    assertEquals(Set.of("aem-author"), pkg6.getVariants());
     assertEquals(false, pkg6.getInstall());
     assertEquals(true, pkg6.getRecursive());
     assertEquals(30, pkg6.getDelayAfterInstallSec());
@@ -79,7 +78,7 @@ class ModelParserTest {
     assertEquals("1.3.1-SNAPSHOT", pkg6.getVersion());
 
     BundleFile bundle12 = (BundleFile)files.get(12);
-    assertEquals(ImmutableSet.of("aem-author"), bundle12.getVariants());
+    assertEquals(Set.of("aem-author"), bundle12.getVariants());
     assertEquals(false, bundle12.getInstall());
   }
 
@@ -110,7 +109,7 @@ class ModelParserTest {
 
   @Test
   void testGetCloudManagerTarget() {
-    assertEquals(ImmutableSet.of("stage", "prod"), nodeModelParser.getCloudManagerTarget());
+    assertEquals(Set.of("stage", "prod"), nodeModelParser.getCloudManagerTarget());
     assertTrue(dispatcherNodeModelParser.getCloudManagerTarget().isEmpty());
   }
 
